--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
     <title>Sumeet Sewate</title>
 </head>
 <body style="width:100%; height:100%; margin:0;">
-    <iframe src="https://docs.google.com/gview?url= https://github.com/sumeetsewate/resume/raw/main/Sumeet_resume_may-converted.pdf &embedded=true" style="width:100%; height:100%;" frameborder="0"></iframe>
+    <iframe src="https://drive.google.com/viewerng/viewer?embedded=true&url=https://github.com/sumeetsewate/resume/raw/main/Sumeet_resume_may-converted.pdf#toolbar=0&scrollbar=0" style="width:100%; height:100%;" frameborder="0" scrolling="auto"></iframe>
 </body>
 </html>
